# voice-to-text-demo

./: README.md  manage.py  pyproject.toml
chatbot_app/: middleware.py  serializers.py  services.py  tests.py  urls.py  views.py
ui/: streamlit_app.py
vt_demo/: asgi.py  settings.py  urls.py  wsgi.py
